--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css"> 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<link rel="shortcut icon" href="w3images/favicon.ico"/>
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
@@ -21,10 +22,11 @@ body {font-size:16px;}
   </div>
   <div class="w3-bar-block">
     <a href="#aboutus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About Us</a>
-    <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Team </a> 
+    <a href="#srteam" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Senior Team</a> 
+    <a href="#jrteam" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Junior Team</a> 
     <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a>  
     <a href="#courses" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Courses</a> 
-    <a href="#apply" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Apply</a>
+    <a href="apply.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Apply</a>
   </div>
 </nav>
 
@@ -46,20 +48,21 @@ body {font-size:16px;}
     <p>Welcome to Hot Beans Web Development. We are a family run business based in the centre of Colchester, Essex. Our experienced team is ready to get your business online.</p>
   </div>
 
-    <!-- Designers -->
-  <div class="w3-container" id="team" style="margin-top:25px">
+    <!-- Sr Team -->
+  <div class="w3-container" id="srteam" style="margin-top:25px">
     <h1 class="w3-xxxlarge w3-text-red"><b>The Team</b></h1>
     <hr style="width:50px;border:5px solid #ffae00" class="w3-round">
-    <b>Senior Team</b>
+    <b style="font-size: 24px">Senior Team</b>
     <p>Below are the founders of our team. Between them they have a portfolio of 1,000s of happy and satifised clients, showing you just what they can achieve. All our senior developers
       are experienced in HTML, CSS, JavaScript, PHP, NodeJS and many other languages. Many are also skilled in image manipulation, logo design, product photography with new skills being
       developed daily. 
     </p>
     <p>With this experience, our senior team is also keen to begin training the next generation of Hot Beans Developers. If you are interested in such a position, please visit our
     <a href="#apply">apply</a> section.</p>
+    
   </div>
 
-  <!-- The Team -->
+  <!-- Sr Team -->
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
@@ -92,6 +95,72 @@ body {font-size:16px;}
       </div>
     </div>
   </div>
+  
+    <!-- Jr Team -->
+    <div class="w3-container" id="jrteam" style="margin-top:25px">
+      <b style="font-size: 24px">Junior Team</b>
+      <p>Below is our junior team - the team that makes the magic happen. These are the people who are developing on the front end, optimising the clients website and ensuring requirements and deadlines are met. You could soon see yourself here by applying for one of our jobs in the <a href="#apply">apply</a> section. 
+      </p>
+      
+    </div>
+  
+    <!-- Jr Team -->
+    <div class="w3-row-padding w3-grayscale">
+      <div class="w3-col m4 w3-margin-bottom">
+        <div class="w3-light-grey">
+          <div class="w3-container">
+            <h3>Lucia Dennis</h3>
+            <p class="w3-opacity">Front End Developer</p>
+            <p>Lucia joined in 2019 as a trainee developer and has since completed her training to become a full stack web developer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="w3-col m4 w3-margin-bottom">
+        <div class="w3-light-grey">
+          <div class="w3-container">
+            <h3>Josh Stevenson</h3>
+            <p class="w3-opacity">Back End Developer</p>
+            <p>Josh works closely with our CTO, Leo Burns, to ensure the security of websites and also ensures optimal efficiency. Josh joined in 2018.</p>
+          </div>
+        </div>
+      </div>
+    <div class="w3-col m4 w3-margin-bottom">
+      <div class="w3-light-grey">
+        <div class="w3-container">
+          <h3>Lorraine Carlson</h3>
+          <p class="w3-opacity">Trainee Front End Developer</p>
+          <p>Lorraine found her passion for web developing in college and since leaving in July 2020 has been working with us to complete her traineeship.</p>
+        </div>
+      </div>
+    </div>        
+    <div class="w3-col m4 w3-margin-bottom">
+        <div class="w3-light-grey">
+          <div class="w3-container">
+            <h3>Olga Ortiz</h3>
+            <p class="w3-opacity">Trainee Front End Developer</p>
+            <p>Olga, after spending 5 years at an accountancy firm decided it wasn't for her. In late 2020 she became a Trainee Web Developer here at Hot Beans.</p>
+          </div>
+        </div>
+      </div>
+      <div class="w3-col m4 w3-margin-bottom">
+        <div class="w3-light-grey">
+          <div class="w3-container">
+            <h3>Johnnie Holmes</h3>
+            <p class="w3-opacity">Trainee Network Engineer</p>
+            <p>After completing his apprenticeship in Cybersecurity, Johnnie wanted a new challanage and joined our firm to work with our CTO to maintain our systems.</p>
+          </div>
+        </div>
+      </div>
+      <div class="w3-col m4 w3-margin-bottom">
+        <div class="w3-grey">
+          <div class="w3-container">
+            <h3>Your Name Here</h3>
+            <p class="w3-opacity">Your Position Here</p>
+            <p>Want to see yourself in this section of the page? Visit our <a href="#apply">apply</a> section to see our current vaccancies and your name could be here!</p>
+          </div>
+        </div>
+      </div>                
+    </div>
 
   <!-- Services -->
   <div class="w3-container" id="services" style="margin-top:25px">
@@ -122,8 +191,6 @@ body {font-size:16px;}
         <li class="w3-padding-16">For those who have little knowledge of HTML and its relevant languages</li>
         <li class="w3-padding-16">A good starting place for learning HTML</li>
         <li class="w3-padding-16">Takes you step by step</li>
-        <li class="w3-padding-16">Online community support</li>
-        <li class="w3-padding-16">This is all bullshit</li>        
         <li class="w3-padding-16">Online community support</li>
         <li class="w3-padding-16">
           <h2>FREE</h2>
@@ -175,7 +242,7 @@ body {font-size:16px;}
   
   <!-- Contact -->
   <div class="w3-container" id="apply" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>Contact</b></h1>
     <hr style="width:50px;border:5px solid #ffae00" class="w3-round">
     <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
     <form action="/action_page.php" target="_blank">
