--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ body {font-size:16px;}
     <a href="#jrteam" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Junior Team</a> 
     <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a>  
     <a href="#courses" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Courses</a> 
-    <a href="apply.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Apply</a>
+    <a href="apply.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Apply →</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact Us</a>
   </div>
 </nav>
 
@@ -241,11 +242,11 @@ body {font-size:16px;}
   </div>
   
   <!-- Contact -->
-  <div class="w3-container" id="apply" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Contact</b></h1>
+  <div class="w3-container" id="contact" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-red"><b>Contact Us</b></h1>
     <hr style="width:50px;border:5px solid #ffae00" class="w3-round">
-    <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
-    <form action="/action_page.php" target="_blank">
+    <p>Need a question you can't find the answer to on our website? Or have another enquiry? Please use the contact form below and we will reply to use as soon as we can!</p>
+    <form action="success.html" target="_self">
       <div class="w3-section">
         <label>Name</label>
         <input class="w3-input w3-border" type="text" name="Name" required>
@@ -259,7 +260,9 @@ body {font-size:16px;}
         <input class="w3-input w3-border" type="text" name="Message" required>
       </div>
       <button type="submit" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom">Send Message</button>
-    </form>  
+    </form>
+    <p>Alternatvely you can find us at the below address: ecks dee</p>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4924.685654862517!2d0.8991271347389835!3d51.891207483616746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d904f620a65149%3A0x2239d520a255bfb2!2sColchester%20Sixth%20Form%20College!5e0!3m2!1sen!2suk!4v1618011765449!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>  
 
 
 
