--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="w3-container" style="margin-top:0px" id="aboutus">
+  <div class="w3-container" style="margin-top:25px" id="aboutus">
     <h1 class="w3-jumbo" style="color: #ffae00;"><b>Hot Beans</b></h1>
     <p>Welcome to Hot Beans Web Development. We are a family run business based in the centre of Colchester, Essex. Our experienced team is ready to get your business online.</p>
   </div>
@@ -59,7 +59,7 @@ body {font-size:16px;}
       developed daily. 
     </p>
     <p>With this experience, our senior team is also keen to begin training the next generation of Hot Beans Developers. If you are interested in such a position, please visit our
-    <a href="#apply">apply</a> section.</p>
+    <a href="apply.html">apply</a> section.</p>
     
   </div>
 
@@ -157,7 +157,7 @@ body {font-size:16px;}
           <div class="w3-container">
             <h3>Your Name Here</h3>
             <p class="w3-opacity">Your Position Here</p>
-            <p>Want to see yourself in this section of the page? Visit our <a href="#apply">apply</a> section to see our current vaccancies and your name could be here!</p>
+            <p>Want to see yourself in this section of the page? Visit our <a href="apply.html">apply</a> section to see our current vaccancies and your name could be here!</p>
           </div>
         </div>
       </div>                
@@ -272,7 +272,7 @@ body {font-size:16px;}
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">copious amounts of drugs</a></p></div>
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Website created by Samuel Howe (16444)</p></div>
 
 <script>
 // Script to open and close sidebar
