--- a/apply.html
+++ b/apply.html
@@ -79,7 +79,7 @@ body {font-size:16px;}
     </form> 
 </div>
 
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">copious amounts of drugs</a></p></div> 
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Website created by Samuel Howe (16444)</p></div>
 <script>
 // Modal Image Gallery
 function onClick(element) {
