--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {font-size:16px;}
 <!-- Top menu on mobile screens -->
 <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-  <span>Hot Beans</span>
+  <span><img src="favicon.ico" alt=""></span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
