--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {font-size:16px;}
 <!-- Top menu on mobile screens -->
 <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-  <span><img src="favicon.ico" alt=""></span>
+  <span><img src="Untitled-2.png" alt=""></span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -44,7 +44,7 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="w3-container" style="margin-top:25px" id="aboutus">
+  <div class="w3-container" style="margin-top:50px" id="aboutus">
     <h1 class="w3-jumbo" style="color: #ffae00;"><b>Hot Beans</b></h1>
     <p>Welcome to Hot Beans Web Development. We are a family run business based in the centre of Colchester, Essex. Our experienced team is ready to get your business online.</p>
   </div>
