--- a/index.html
+++ b/index.html
@@ -207,17 +207,17 @@ body {font-size:16px;}
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
         <li class="w3-xlarge w3-padding-32 w3-dark-grey">Intermediate Courses</li>
-        <li class="w3-padding-16">Floorplanning</li>
-        <li class="w3-padding-16">50 hours support</li>
-        <li class="w3-padding-16">Photography</li>
-        <li class="w3-padding-16">50% furniture discount</li>
-        <li class="w3-padding-16">Mediocre deals</li>
+        <li class="w3-padding-16">Ideal for those looking to improve their skills</li>
+        <li class="w3-padding-16">The potential to learn other web related languages (i.e JavaScript)</li>
+        <li class="w3-padding-16">Gain an industry recognised qualification</li>
+        <li class="w3-padding-16">Ability to learn transferrable skills</li>
         <li class="w3-padding-16">
-          <h2>$ 249</h2>
-          <span class="w3-opacity">per room</span>
+          <h2>£ 120</h2>
+          <span class="w3-opacity">as low as</span>
         </li>
         <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-red w3-padding-large w3-hover-black">Sign Up</button>
+          <button class="w3-button w3-dark-grey w3-padding-large w3-hover-black" onclick="window.open('https://www.distance-learning-centre.co.uk/webmaster-html-css-course/', '_blank')">DLC</button>
+          <button class="w3-button w3-dark-grey w3-padding-large w3-hover-black" onclick="window.open('https://www.londonacademyofit.co.uk/training-course-web-design', '_blank')">LAIT</button>
         </li>
       </ul>
     </div>
@@ -225,17 +225,16 @@ body {font-size:16px;}
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
         <li class="w3-red w3-xlarge w3-padding-32">Professional Courses</li>
-        <li class="w3-padding-16">Floorplanning</li>
-        <li class="w3-padding-16">50 hours support</li>
-        <li class="w3-padding-16">Photography</li>
-        <li class="w3-padding-16">50% furniture discount</li>
-        <li class="w3-padding-16">Amazing deals</li>
+        <li class="w3-padding-16">Gain an (inter)nationally recognised qualification</li>
+        <li class="w3-padding-16">Potential for industry experience with the right course</li>
+        <li class="w3-padding-16">Complete the course with a student loan and have less worry about paying for the course</li>
+        <li class="w3-padding-16">A-level entry requirement</li>
         <li class="w3-padding-16">
-          <h2>$ 249,999,999</h2>
-          <span class="w3-opacity">per room</span>
+          <h2>£ 9,250</h2>
+          <span class="w3-opacity">per year (finance options available)</span>
         </li>
         <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-red w3-padding-large w3-hover-black">Sign Up</button>
+          <button class="w3-button w3-red w3-padding-large w3-hover-black" onclick="window.open('https://digital.ucas.com/coursedisplay/results/providers?searchTerm=web%20development&destination=Undergraduate', '_blank')">UCAS</button>
         </li>
       </ul>
     </div>
