--- a/success.html
+++ b/success.html
@@ -20,8 +20,13 @@ body {font-size:16px;}
       <h3 class="w3-padding-64"><a href="#aboutus"><img src="w3images/Logo.svg" alt="Hot Beans Logo" style="scale: 75%;"></a></h3>
     </div>
     <div class="w3-bar-block">
-      <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">↩ Back to main site</a>
+      <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">← Back to main site</a>
     </div>
+    <div class="social; centre" style="padding-top:30px; scale: 90%;">
+      <a href="https://twitter.com" target="_blank" title="Follow Hot Beans on Twitter" alt="Twitter Hyperlink"><img src="w3images/twitter.png" style="padding-left:5px;"/></a>
+      <a href="https://linkedin.com" target="_blank" title="Follow Hot Beans on LinkedIn" alt="LinkedIn Hyperlink"><img src="w3images/linkedin.png" style="padding-left: 20px;" /></a>
+      <a href="https://instagram.com" target="_blank" title="Follow Hot Beans on Instagram" alt="Instagram Hyperlink"><img src="w3images/instagram.png" style="padding-left: 20px";/></a>
+  </div>
   </nav>
 
   <!-- Top menu on mobile screens -->
