--- a/apply.html
+++ b/apply.html
@@ -22,6 +22,11 @@ body {font-size:16px;}
     <div class="w3-bar-block">
       <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">← Back to main site</a>
     </div>
+    <div class="social; centre" style="padding-top:30px; scale: 90%;">
+        <a href="https://twitter.com" target="_blank" title="Follow Hot Beans on Twitter" alt="Twitter Hyperlink"><img src="w3images/twitter.png" style="padding-left:5px;"/></a>
+        <a href="https://linkedin.com" target="_blank" title="Follow Hot Beans on LinkedIn" alt="LinkedIn Hyperlink"><img src="w3images/linkedin.png" style="padding-left: 20px;" /></a>
+        <a href="https://instagram.com" target="_blank" title="Follow Hot Beans on Instagram" alt="Instagram Hyperlink"><img src="w3images/instagram.png" style="padding-left: 20px";/></a>
+    </div>
   </nav>
 
   <!-- Top menu on mobile screens -->
