--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ body {font-size:16px;}
     <a href="apply.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Apply →</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact Us</a>
   </div>
+  <div class="social; centre" style="padding-top:30px; scale: 90%;">
+    <a href="https://twitter.com" target="_blank" title="Follow Hot Beans on Twitter" alt="Twitter Hyperlink"><img src="w3images/twitter.png" style="padding-left:5px;"/></a>
+    <a href="https://linkedin.com" target="_blank" title="Follow Hot Beans on LinkedIn" alt="LinkedIn Hyperlink"><img src="w3images/linkedin.png" style="padding-left: 20px;" /></a>
+    <a href="https://instagram.com" target="_blank" title="Follow Hot Beans on Instagram" alt="Instagram Hyperlink"><img src="w3images/instagram.png" style="padding-left: 20px";/></a>
+</div>
 </nav>
 
 <!-- Top menu on mobile screens -->
@@ -260,7 +265,7 @@ body {font-size:16px;}
       </div>
       <button type="submit" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom">Send Message</button>
     </form>
-    <p>Alternatvely you can find us at the below address: ecks dee</p>
+    <p>Alternatvely you can find us at the below address:</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4924.685654862517!2d0.8991271347389835!3d51.891207483616746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d904f620a65149%3A0x2239d520a255bfb2!2sColchester%20Sixth%20Form%20College!5e0!3m2!1sen!2suk!4v1618011765449!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>  
 
 
