--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@ body {font-size:16px;}
   <!-- Header -->
   <div class="w3-container" style="margin-top:50px" id="aboutus">
     <h1 class="w3-jumbo" style="color: #ffae00;"><b>Hot Beans</b></h1>
-    <p>Welcome to Hot Beans Web Development. We are a family run business based in the centre of Colchester, Essex. Our experienced team is ready to get your business online.</p>
+    <p>Welcome to Hot Beans Web Development. A family based business that was established 2013 to work with our local community and help get their business' launched into the digital world. Since then we have exapanded our operations to help businesses nationwide. We have a team of developers
+      who would be happy to face any challanges you can throw at them and a customer support team that are able to deal with your problems when they arise so with Hot Beans Web Development, you can rest assured we have your businesses best interests at heart.
+    </p>
   </div>
 
     <!-- Sr Team -->
@@ -167,18 +169,6 @@ body {font-size:16px;}
         </div>
       </div>                
     </div>
-
-  <!-- Services -->
-  <div class="w3-container" id="services" style="margin-top:25px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Services.</b></h1>
-    <hr style="width:50px;border:5px solid #ffae00" class="w3-round">
-    <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
-    <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
-  </div>
-  
 
   <!-- Packages / Pricing Tables -->
   <div class="w3-container" id="courses" style="margin-top:75px">
