--- a/success.html
+++ b/success.html
@@ -45,6 +45,12 @@ body {font-size:16px;}
     <p>Thanks for getting in touch! We aim to reply to all enquiries with 10 business days</p>
     <br>
     <p>You may now return to the main site!</p>
+    
+    <span style="color: black; background: black;">test</span>
+
+    <p>Then when hovered over</p>
+
+    <span style="color: white; background: black;">test</span>
 
 <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Website created by Samuel Howe (16444)</p></div>
 </body>
