--- a/success.html
+++ b/success.html
@@ -46,11 +46,11 @@ body {font-size:16px;}
     <br>
     <p>You may now return to the main site!</p>
     
-    <span style="color: black; background: black;">test</span>
+    <button type="button" class="collapsible">Open Collapsible</button>
+    <div class="content">
+    <p>Lorem ipsum...</p>
+    </div>
 
-    <p>Then when hovered over</p>
-
-    <span style="color: white; background: black;">test</span>
-
+    
 <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Website created by Samuel Howe (16444)</p></div>
 </body>
