--- a/apply.html
+++ b/apply.html
@@ -83,9 +83,10 @@ body {font-size:16px;}
         <input type="Button" value="Submit" onclick="submitForm()" class="w3-button w3-black w3-padding-large">
     </form> 
     
-    <button type="button" class="collapsible">Open Collapsible</button>
+    <button type="button" class="collapsible">Data Protection</button>
 <div class="content">
-  <p>Lorem ipsum...</p>
+  <p>Hot Beans Web Development collects the data you provided in order to make our services better for you. We may also collect this data for our insurers. Hot Beans Web Development
+    does not and will not sell data to any 3rd party. However, Hot Beans Web Development will co-operate with lawful requests made by law enforcement agencies.</p>
 </div>
 
     
