--- a/success.html
+++ b/success.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Hot Beans Jobs</title>
+<title>Form Sent Successfully</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css"> 
